Shivansh | Stage | fixed visibility for preview of template E on content tab

--- a/apps/web-giddh/src/app/invoice/templates/edit-template/out-tempate/templates/gst-template-a/gst-template-a.component.scss
+++ b/apps/web-giddh/src/app/invoice/templates/edit-template/out-tempate/templates/gst-template-a/gst-template-a.component.scss
@@ -75,7 +75,7 @@ p {
     padding: 0.1in;
     letter-spacing: 0;
     width: 100%;
-    background: var(--color-primary-invoice-preview-background);
+    background: var(--color-white-tertiary);
     border-radius: 1px;
 }
 
