--- a/apps/web-giddh/src/assets/css/themes/dark.scss
+++ b/apps/web-giddh/src/assets/css/themes/dark.scss
@@ -681,6 +681,7 @@ body.dark-theme {
     --color-skeleton-loading-gradient-inner: #212528;
     --color-white: #212528;
     --color-white-secondary: #212528;
+    --color-white-tertiary: #ffffff;
     --color-dark-fog: #668cff26;
     --color-lavender: #e7e9eb;
     --color-iron: #9b9b9e;
